1차 내부 리뷰 4 - login .wrap height fix 1920 -> 1740

--- a/client/views/login/login.less
+++ b/client/views/login/login.less
@@ -1,6 +1,6 @@
 #login {
   /* layout */
-  .wrap {width:1080px; height:1920px; background-color:#e7e7f1;
+  .wrap {width:1080px; height:1740px; background-color:#e7e7f1;
   }
   .header {width:100%; height:160px; background-color:#204bb4; position:relative;
     z-index: 1;}
